--- a/src/components/heading/Heading.css
+++ b/src/components/heading/Heading.css
@@ -3,26 +3,25 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
+  float: left;
   height: 80px;
 }
 
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 120px;
   padding: 20px;
   color: white;
 }
 
 .App-title {
-  font-size: 1.5em;
+  font-size: 2em;
 }
 
 .App-intro {
   font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.Login-state {
+  float: right;
 }
