--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,16 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.ReactTable {
+  margin-top: 10px;
+  height: calc(100vh - 150px);
+}
+
+.rt-td {
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  white-space: pre-line !important;
+  word-wrap: break-word;
+}
